Sync fork snapshot